--- a/friday.html
+++ b/friday.html
@@ -57,7 +57,7 @@
                             <li><a href="players.html">The Players</a></li>
                              <li><a href="map.html">Map</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
-                           <li><a href="historians.html">The Historians</a></li>
+                    
 							<li><a href="about.html">About</a></li>
 							
 						</ul>
@@ -83,18 +83,18 @@
  <p>Men were dragged from their homes and shot, at 27 North King Street, four men were killed and buried in the back yard. It was only later, when the bodies were dug up that it became clear that the men were robbed of personal possessions and cash before being killed. At 170 North King Street, three bodies, dead from bayonet wounds, were later found. These bodies included that of Christiopher Hickey who's family ran the butcher shop on the street. At only sixteen, he was the youngest vitim of this killing spree. Nine of the murders were committed in a block on North King Street between Ann Street and Beresford Street — ten houses in a row together that covered just a few yards, with number 27 North King Street standing directly opposite. Two further victims were claimed on Saturday morning on nearby Coleraine Street and Constitution Hill. </p>
  <table width="100%" border="0">
   <tr>
-    <td>  <video width="100%" poster="images/nkste.jpg" controls>
+    <td>  <video width="100%" poster="images/nkst1.jpg" controls>
   <source src="assets/video/northkingstreet1.mp4" type="video/mp4"
  
 </video></td>
-<td> <video width="100%" poster="images/soldier.png" controls>
+<td> <video width="100%" poster="images/solider.png" controls>
   <source src="assets/video/northkingstreet2.mp4" type="video/mp4">
  
 </video></td></tr></table>
  
  <p> Nearly two weeks later, on the 10th of May, a "heavy smell" was noticed to be coming from the cellar of a bar at 177 North King Street. Two bodies were found, Patrick Bealen and James Healy. At the subsequent inquest, Healy's skull was described as being smashed in 'with some heavy instrument', most likely while the victim was still alive. This discovery lead to an official British military inquiry later the same month. The proceedings were headed up by Colonel Ernest Maconchy, commander of the same Sherwood Foresters who had lost so many at Mount Street Bridge, so it may not come as a surprise that no action was taken against Colonel Taylor or the South Staffordshire regiment, who were described as 'a quiet and respectable set of men'. General Maxwell saw such incidents as 'absolutely unavoidable in such a business' and that responsibility lies with those who would resist 'His Majesty's troops in the execution of their duty'. He went on to express the opinion that his troops had acted with 'the greatest restraint'.</p>
  
-
+<img src="images/direction/dir6.jpg" width="100%" alt="direction">
  
 						</div>
 					</div>
