--- a/wednesday.html
+++ b/wednesday.html
@@ -58,7 +58,7 @@
                             <li><a href="players.html">The Players</a></li>
                              <li><a href="map.html">Map</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
-                           <li><a href="historians.html">The Historians</a></li>
+                         
 							<li><a href="about.html">About</a></li>
 							
 						</ul>
@@ -87,7 +87,7 @@ Throughout the battle, the volunteer positions were supported by sniper fire fro
 </p>
 
 <p>Four eighteen pound field guns stationed at Trinity College had begun pounding the centre of the city, and the Helga's guns had switched their attention from Liberty Hall to the GPO. General Sir John Maxwell was dispatched from London, with orders to "take such measures as may be necessary for the prompt suppression of the insurrection". Maxwell was determined to accept nothing less than full unconditional surrender from the rebels.</p>
- 
+ <img src="images/direction/dir4.jpg" width="100%" alt="direction">
 					  </div>
 					</div>
 
