--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Dublin 1916</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="assets/css/flickity.css" />
@@ -54,7 +55,7 @@
                             <li><a href="players.html">The Players</a></li>
                              <li><a href="map.html">Map</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
-                           <li><a href="historians.html">The Historians</a></li>
+                       
 							<li><a href="about.html">About</a></li>
 							
 						</ul>
