--- a/players.html
+++ b/players.html
@@ -134,6 +134,7 @@
 
   <div class="modal modal--scale-up" id="modal2">
 
+
     <div class="modal__window">
 
       <button class="modal__close-btn" type="button" data-close-modal>
@@ -146,16 +147,24 @@
 
         </div>
 
-        <div class="modal__content">
-<img src="images/Sackville_Street.jpg" width="100%">
-         <p>In the week before the Rising, the council of the IRB presented MacNeill with a letter, allegedly stolen from high-ranking British staff in Dublin Castle, indicating that his arrest, and that of all the other nationalist leaders, was imminent. The letter, called the Castle Document, was, however, a forgery. When MacNeill learned about the IRB's rising plans, and when he was informed that Roger Casement was about to land in County Kerry with a shipment of German arms, he was reluctantly persuaded to go along with them, believing British action was now imminent and mobilisation of the Volunteers would, at this stage, be a defensive act.However, on learning of the arrest of Casement, and the loss of the promised German arms, MacNeill countermanded the order for the Rising. He asked men he trusted to deliver the order to as many commanders as possible. He himself brought a longer version of the note to the Sunday Independent newspaper, where it was inserted as an advertisement.</p>
+        <div class="modal__content"><div class="modal__figpicmain">
+<img src="images/players/pearse2.jpg" width="100%"><p>Portrait of Patrick Pearse in overcoat and Homburg hat (Kilmainham Gaol Museum)</p></div>
+         <p>Pearse was born in 1879 at 27 Great Brunswick Street, now renamed Pearse Street in his honour, to an English stonemason father, James, and a Dublin born mother, Margaret Brady, James' second wife. His father had built up a very successful stonemason business, 'Pearse &amp; Sons', the largest of it's kind in Ireland at the time. Inspired by his Irish-speaking mother, Pearse became interested in Home Rule and the Gaelic League early in life. The Gaelic League, or Conradh na Gaeilge, was founded in Dublin in 1893 by Douglas Hyde, amongst others, to promote the Irish language and culture, and was instrumental in the Gaelic Revival of the late-nineteenth-century, which saw a nationwide surge of interest in the Gaelic language and culture. Pearse at 23, in 1903, was appointed editor of the League's newspaper, <em>An Claidheamh Soluis</em> ("The Sword of Light").</p>
+         
+         
 
- <p>Helena Moloney was at Liberty Hall, the headquarters of the Citizen Army, on Easter Sunday morning:<br />
+<p>Spurred on by his belief that the Irish language was intrinsic to the identity of an Irish nation, he started his own bilingual school for boys, St. Enda's (Scoil Éanna) in Cullenswood House in Ranelagh in 1908. Two years later the School moved to The Hermitage in Rathfarnham, now home to the Pearse Museum. Although the school was a success, the wolf was never far from the door. Pearse’s efforts to keep the school going included a fund raising trip to the United States in 1914, where he met John Devoy and Joseph McGarrity, and impressed them both so much, they helped to secure funds for the school.</p>
 
-“I saw Eoin MacNeill’s countermanding order in the paper and heard the discussion in Liberty Hall. Connolly was there. They were all heartbroken, and when they were not crying, they were cursing. I kept thinking, ‘Does this mean that we are not going out?’ There were thousands like us. Many of us thought we would go out single-handed, if necessary.”</p>
+<p>In 1913, Pearse attended the inaugural meeting of the Irish Volunteers, an organization founded as a defense against the Ulster Volunteers. The Home Rule bill, which had passed in the House of Commons in 1912, was on the statute books, despite it being delayed by the House of Lords. Pearse had spoken at a Home Rule Rally. All this changed with the outbreak of World War I, which saw the bill suspended for the duration. This, along with the subsequent split in the Volunteers over issues such as support for the British war effort, left Pearse disillusioned.</p>
 
- <p>MacNeill’s prevarication over whether or not to go ahead with the rebellion, combined with the late notice, meant that the message caused confusion among rebels, especially in areas furthest from Dublin,  severely reducing the number of volunteers who reported for duty on the day. Members of the Irish Republican Brotherhood delayed the Dublin rebellion by 24 hours.</p>
- <p>Thanks to MacNeill's countermand, only a small percentage of approximately 10,000 volunteers took part in the actual rising. The number of Brisith soldiers in Ireland at the time was low thanks to the first world war, so the extra volunteers would have no doubt made a huge difference to the events of the week ahead.</p>
+<p>Pearse was sworn into the Irish Republican Brotherhood by Bulmer Hobson. This was a secret organization dedicated to the overthrow of British Rule and the establishment of a Republic. Pearse was soon sworn into the secret military council, and it was this ‘minority of a minority’ (R.F. Foster) who planned an insurrection while British attentions were focused on the continent.</p>
+
+<p>In August of 1915, Pearse gave the famous graveside speech at the funeral of the Fenian Jeremiah O'Donovan Rossa, a rousing speech that stirred the hearts of many Repulicans.</p>
+
+<bclokquote><p> ‘They think that they have pacified Ireland. They think that they have purchased half of us and intimidated the other half. They think that they have foreseen everything, think that they have provided against everything; but, the fools, the fools, the fools! – They have left us our Fenian dead, and while Ireland holds these graves, Ireland unfree shall never be at peace.’</p></blockquote>
+
+<p>Following on from his reading of the Proclamation, Pearse spent the week of the Rising in the GPO, and eventually orderd the surrender to spare further loss of life and property. After his trial, Pearse was the first leader to be executed, early of the 3rd of May, 1916.</p>
+
 
       <button class="btn" type="button" data-close-modal></button>
 
