--- a/monday.html
+++ b/monday.html
@@ -59,7 +59,7 @@
                             <li><a href="players.html">The Players</a></li>
                              <li><a href="map.html">Map</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
-                           <li><a href="historians.html">The Historians</a></li>
+                         
 							<li><a href="about.html">About</a></li>
 							
 						</ul>
@@ -165,7 +165,8 @@ After setting to work at around 11 that morning, they discovered that there wasn
  
  <p>By the afternoon, the city centre was under rebel control and the Dublin Metropolitan Police were pulled off the streets after three of their unarmed members were killed, Michael Mallin's ICA brigade had dug in around Stephen's Green, but, mistakenly, not at the Shelbourne Hotel, and Countess Markievicz was parading around the streets in the Citizen Army uniform that she designed, indeed she was asked by a passer by if she was in a rehearsal for something. The rebels must have felt there were in a good position as the faced the first rainy night. </p>
  
- <p> Plans to take the central telephone excahnge come to nothing due to false reports of the presence of British soldiers inside, the rebels give up on the plan without inspecting the building. Communication lines to military barricks around the country, and to London, remain open, and Brigadere General William Lowe, commander in chief of the british forces in Ireland, is able to summon troops to the city. If the British had greeted the rising with initial bank holiday disregard, this 'Fairyhouse' attitude had now dispelled, and troops slipped into the Shelbourne Hotel, and to other locations, unopposed, and now hold a key vantage point over the rebels in the Green on the opposite side of the street.</p>
+ <p> Plans to take the central telephone exchange come to nothing due to false reports of the presence of British soldiers inside, the rebels give up on the plan without inspecting the building. Communication lines to military barricks around the country, and to London, remain open, and Brigadere General William Lowe, commander in chief of the British forces in Ireland, is able to summon troops to the city. If the British had greeted the rising with initial bank holiday disregard, this 'Fairyhouse' attitude had now dispelled, and troops slipped into the Shelbourne Hotel, and to other locations, unopposed, and now hold a key vantage point over the rebels in the Green on the opposite side of the street.</p>
+ <img src="images/direction/dir2.jpg" width="100%" alt="direction">
  <!--<div class="img1">
  <a href="images/macneillnote.jpg" data-lightbox="MacNeill" data-title="MacNeill's handwritten note, which reads “Volunteers completely deceived. All orders for tomorrow Sunday are entirely cancelled”, is dated Saturday 22 April 1916 and signed by Eoin Mac Neill. A copy of this note sold at auction for €30,000 in 2014."><img src="images/macneillnotes.jpg" alt="MacNeill's note" /></a></div>
  
