--- a/players.html
+++ b/players.html
@@ -71,7 +71,7 @@
   <table width="100%" border="0">
   <tr>
     <td> <!--CONNOLLY MODAL--><div class="container"> 
-    <a href="#" data-trigger-modal="modal"><img src="images/players/connolly.jpg" width="100%" alt="James Connolly"></a>
+    <a href="#" data-trigger-modal="modal"><img src="images/players/connolly1.jpg" width="100%" alt="James Connolly"></a>
   
 
   <div class="modal modal--scale-up" id="modal">
@@ -451,7 +451,7 @@
     <td><!--MACNEIL MODAL-->
  
 <div class="container"> 
-    <a href="#" data-trigger-modal="modal8"><img src="images/players/markievicz.jpg" width="100%" alt="Sean Mac Diarmada"></a>
+    <a href="#" data-trigger-modal="modal8"><img src="images/players/markievicz1.jpg" width="100%" alt="Sean Mac Diarmada"></a>
   
 
   <div class="modal modal--scale-up" id="modal8">
@@ -611,7 +611,7 @@
     <td><!--MACNEIL MODAL-->
  
 <div class="container"> 
-    <a href="#" data-trigger-modal="modal11"><img src="images/players/markievicz.jpg" width="100%" alt="Sean Mac Diarmada"></a>
+    <a href="#" data-trigger-modal="modal11"><img src="images/players/markievicz1.jpg" width="100%" alt="Sean Mac Diarmada"></a>
   
 
   <div class="modal modal--scale-up" id="modal11">
